--- a/config.org
+++ b/config.org
@@ -50,43 +50,6 @@
           (file2 (pop command-line-args-left)))
       (ediff file1 file2)))
 
-  (defun havner/generate-scratch-buffer ()
-    "Create and switch to a temporary scratch buffer with a random
-       name."
-    (interactive)
-    (switch-to-buffer (make-temp-name "scratch-")))
-
-  (defun havner/kill-current-buffer ()
-    "Kill the current buffer without prompting."
-    (interactive)
-    (kill-buffer (current-buffer)))
-
-  (defun havner/split-window-below-and-switch ()
-    "Split the window horizontally, then switch to the new pane."
-    (interactive)
-    (split-window-below)
-    (balance-windows)
-    (other-window 1))
-
-  (defun havner/split-window-right-and-switch ()
-    "Split the window vertically, then switch to the new pane."
-    (interactive)
-    (split-window-right)
-    (balance-windows)
-    (other-window 1))
-
-  (defun havner/delete-window-and-balance ()
-    "Delete current window and balance"
-    (interactive)
-    (delete-window)
-    (balance-windows))
-
-  (defun havner/kill-buffer-and-window-and-balance ()
-    "Kill buffer and window and balance"
-    (interactive)
-    (kill-buffer-and-window)
-    (balance-windows))
-
   (defun havner/find-file-as-sudo ()
     (interactive)
     (let ((file-name (buffer-file-name)))
@@ -142,6 +105,74 @@
                (current-buffer))
       (error (message "Invalid expression")
              (insert (current-kill 0)))))
+#+END_SRC
+
+#+RESULTS:
+: havner/eval-and-replace
+
+** o/k/1/2/3/0
+#+BEGIN_SRC emacs-lisp
+  (require 'switch-window)
+
+  ;;;;; extension to switch-window (e.g. kill-window)
+
+  (defun kill-current-buffer ()
+    "Kill the current buffer without prompting."
+    (interactive)
+    (kill-buffer (current-buffer)))
+
+  (defun switch-window-then-kill-buffer ()
+      "switch-window--then kill-current-buffer"
+    (interactive)
+    (switch-window--then
+     "Kill buffer in window: "
+     #'kill-current-buffer
+     #'kill-current-buffer t 1))
+
+  (defun switch-window-then-kill-buffer-and-window ()
+      "switch-window--then kill-buffer-and-window"
+    (interactive)
+    (switch-window--then
+     "Kill buffer in window: "
+     #'kill-buffer-and-window
+     #'kill-buffer-and-window t 1))
+
+  ;;;;; switch-window modifiers
+
+  (defun havner/switch-window-or-windresize (&optional arg)
+    "switch-window, with arg windresize"
+    (interactive "P")
+    (if arg
+        (windresize)
+      (switch-window)))
+
+  ;;;;; OLD
+
+  (defun havner/split-window-below-and-switch ()
+    "Split the window horizontally, then switch to the new pane."
+    (interactive)
+    (split-window-below)
+    (balance-windows)
+    (other-window 1))
+
+  (defun havner/split-window-right-and-switch ()
+    "Split the window vertically, then switch to the new pane."
+    (interactive)
+    (split-window-right)
+    (balance-windows)
+    (other-window 1))
+
+  (defun havner/delete-window-and-balance ()
+    "Delete current window and balance"
+    (interactive)
+    (delete-window)
+    (balance-windows))
+
+  (defun havner/kill-buffer-and-window-and-balance ()
+    "Kill buffer and window and balance"
+    (interactive)
+    (kill-buffer-and-window)
+    (balance-windows))
 #+END_SRC
 
 ** Themes
@@ -232,6 +263,32 @@
 #+END_SRC
 
 * Configuration
+** Themes
+#+BEGIN_SRC emacs-lisp
+  (setq solarized-termcolors 16)
+
+  (defun havner/solarized3-settings ()
+    "Load solarized3 settings"
+    (setq solarized-use-variable-pitch nil)
+    (setq solarized-height-plus-1 1.0)
+    (setq solarized-height-plus-2 1.0)
+    (setq solarized-height-plus-3 1.0)
+    (setq solarized-height-plus-4 1.0)
+    (setq solarized-high-contrast-mode-line nil))
+
+  (defun havner/spacemacs-settings ()
+    (setq spacemacs-theme-comment-bg nil)
+    (setq spacemacs-theme-comment-italic t)
+    (setq spacemacs-theme-org-height nil))
+
+  (cond (window-system
+         (havner/spacemacs-dark-load))
+        ((equal (getenv "TERM") "xterm-256color")
+         (havner/solarized-dark-load))
+        ((equal (getenv "TERM") "xterm-16color")
+         (havner/solarized-dark-load)))
+#+END_SRC
+
 ** GOD mode
 #+BEGIN_SRC emacs-lisp
   (god-mode)
@@ -259,32 +316,6 @@
     (add-hook 'overwrite-mode-hook 'god-toggle-on-overwrite)
     (add-hook 'god-mode-enabled-hook (lambda nil (interactive)
                                        (overwrite-mode 0))))
-#+END_SRC
-
-** Themes
-#+BEGIN_SRC emacs-lisp
-  (setq solarized-termcolors 16)
-
-  (defun havner/solarized3-settings ()
-    "Load solarized3 settings"
-    (setq solarized-use-variable-pitch nil)
-    (setq solarized-height-plus-1 1.0)
-    (setq solarized-height-plus-2 1.0)
-    (setq solarized-height-plus-3 1.0)
-    (setq solarized-height-plus-4 1.0)
-    (setq solarized-high-contrast-mode-line nil))
-
-  (defun havner/spacemacs-settings ()
-    (setq spacemacs-theme-comment-bg nil)
-    (setq spacemacs-theme-comment-italic t)
-    (setq spacemacs-theme-org-height nil))
-
-  (cond (window-system
-         (havner/spacemacs-dark-load))
-        ((equal (getenv "TERM") "xterm-256color")
-         (havner/solarized-dark-load))
-        ((equal (getenv "TERM") "xterm-16color")
-         (havner/solarized-dark-load)))
 #+END_SRC
 
 ** Dashboard
@@ -442,7 +473,12 @@
 #+BEGIN_SRC emacs-lisp
   (setq avy-keys (append (number-sequence ?a ?z) (number-sequence ?A ?Z)))
   (setq avy-background t)
+
   (setq switch-window-increase 6)
+  ;; (setq switch-window-minibuffer-shortcut ?z)
+  ;; (setq switch-window-auto-resize-window t)
+  ;; (setq switch-window-default-window-size '(0.618 . 0.618))
+  ;; (switch-window-mouse-mode t)
 #+END_SRC
 
 ** Buffer Show
@@ -605,9 +641,11 @@
   (setq company-semantic-insert-arguments t)
   (setq company-gtags-insert-arguments nil)
 
-  (setq company-c-headers-path-system '("/usr/include/" "/usr/local/include/" "/usr/include/python3.5m"))
-  (setq company-clang-executable "/usr/bin/clang++")
-  (setq company-clang-arguments '("-std=c++11" "-I/usr/include/python3.5m"))
+  (setq company-c-headers-path-system '("/usr/include" "/usr/local/include" "/usr/include/python3.5m"))
+  (setq company-clang-arguments '("-I/usr/include/python3.5m"))
+  (add-hook 'c++-mode (lambda nil
+                        (setq company-clang-executable "/usr/bin/clang++")
+                        (setq company-clang-arguments '("-std=c++11" "-I/usr/include/python3.5m"))))
   (setq company-semantic-begin-after-member-access nil)
 #+END_SRC
 
@@ -959,18 +997,22 @@ forward/backward:
   (global-set-key (kbd "C-x C-d") 'dired)
   (global-set-key (kbd "C-s") 'isearch-forward-regexp)
   (global-set-key (kbd "C-r") 'isearch-backward-regexp)
-  (global-set-key (kbd "C-c k") 'havner/kill-buffer-and-window-and-balance)
-  (global-set-key (kbd "C-x k") 'havner/kill-current-buffer)
-  (global-set-key (kbd "C-x 0") 'havner/delete-window-and-balance)
-  (global-set-key (kbd "C-x 2") 'havner/split-window-below-and-switch)
-  (global-set-key (kbd "C-x 3") 'havner/split-window-right-and-switch)
 
+  (global-set-key (kbd "C-x C-o") 'switch-window-then-swap-buffer)             ;; thr 2
+  (global-set-key (kbd "C-x o") 'havner/switch-window-or-windresize)           ;; thr 2
+  (global-set-key (kbd "C-x C-k") 'switch-window-then-kill-buffer-and-window)  ;; thr 1
+  (global-set-key (kbd "C-x k") 'switch-window-then-kill-buffer)               ;; thr 1
+  (global-set-key (kbd "C-x 1") 'switch-window-then-maximize)                  ;; thr 2
+  (global-set-key (kbd "C-x 2") 'switch-window-then-split-below)               ;; thr 1
+  (global-set-key (kbd "C-x 3") 'switch-window-then-split-right)               ;; thr 1
+  (global-set-key (kbd "C-x 0") 'switch-window-then-delete)                    ;; thr 2
+
+  (global-set-key (kbd "C-x j") 'semantic-ia-fast-jump)
   (global-set-key (kbd "C-x C-j") 'dired-jump)
   (global-set-key (kbd "C-x t") 'toggle-truncate-lines)
   (global-set-key (kbd "C-c f") 'other-frame)
   (global-set-key (kbd "C-c C-f") 'make-frame)
   (global-set-key (kbd "C-c w") 'whitespace-mode)
-  (global-set-key (kbd "C-x j") 'semantic-ia-fast-jump)
   (global-set-key (kbd "C-c l") 'org-store-link)
   (global-set-key (kbd "C-c s") 'org-capture)
   (global-set-key (kbd "C-c a") 'org-agenda)
@@ -986,13 +1028,14 @@ forward/backward:
 
 ** External modules
 #+BEGIN_SRC emacs-lisp
-  ;; (global-set-key (kbd "%") 'havner/match-paren)
-  (global-set-key (kbd "C-x F") 'havner/find-file-as-sudo)
   (global-set-key (kbd "C-x o") 'switch-window)
+  (global-set-key (kbd "C-x C-o") 'switch-window-then-swap-buffer)
   (global-set-key (kbd "C-x w") 'windresize)
   (global-set-key (kbd "C-x C-b") 'bs-show)
-  (global-set-key (kbd "C-c h") 'idle-highlight-mode)
-  (global-set-key (kbd "C-c C-l") 'nlinum-mode)
+  (global-set-key (kbd "C-x C-F") 'havner/find-file-as-sudo)
+
+  (global-set-key (kbd "C-%") 'havner/match-paren)
+  (global-set-key (kbd "C-c h") 'highlight-thing-mode)
   (global-set-key (kbd "C-c m") 'magit-status)
   (global-set-key (kbd "C-c C-m") 'magit-log-head)
   (global-set-key (kbd "C-c g") 'magit-dispatch-popup)
@@ -1113,17 +1156,19 @@ forward/backward:
     (define-key isearch-mode-map (kbd "<escape>") 'god-mode-isearch-activate)
     (define-key god-mode-isearch-map (kbd "<escape>") 'god-mode-isearch-disable)
 
-    (global-set-key (kbd "C-x C-1") 'delete-other-windows)
-    (global-set-key (kbd "C-x C-0") 'havner/delete-window-and-balance)
-    (global-set-key (kbd "C-x C-2") 'havner/split-window-below-and-switch)
-    (global-set-key (kbd "C-x C-3") 'havner/split-window-right-and-switch)
+    (global-set-key (kbd "C-x o") 'switch-window-then-swap-buffer)             ;; thr 2
+    (global-set-key (kbd "C-x C-o") 'havner/switch-window-or-windresize)       ;; thr 2
+    (global-set-key (kbd "C-x k") 'switch-window-then-kill-buffer-and-window)  ;; thr 1
+    (global-set-key (kbd "C-x C-k") 'switch-window-then-kill-buffer)           ;; thr 1
+    (global-set-key (kbd "C-x C-1") 'switch-window-then-maximize)              ;; thr 2
+    (global-set-key (kbd "C-x C-2") 'switch-window-then-split-below)           ;; thr 1
+    (global-set-key (kbd "C-x C-3") 'switch-window-then-split-right)           ;; thr 1
+    (global-set-key (kbd "C-x C-0") 'switch-window-then-delete)                ;; thr 2
 
-    (global-set-key (kbd "C-x k") 'kmacro-keymap)
-    (global-set-key (kbd "C-x C-k") 'havner/kill-current-buffer)
     (global-set-key (kbd "C-x b") 'bs-show)
     (global-set-key (kbd "C-x C-b") 'helm-buffers-list)
-    (global-set-key (kbd "C-x o") 'delete-blank-lines)
-    (global-set-key (kbd "C-x C-o") 'switch-window))
+    (global-set-key (kbd "C-c f") 'make-frame)
+    (global-set-key (kbd "C-c C-f") 'other-frame))
 #+END_SRC
 
 * TO BE REMOVED
